@@ -1,3 +1,5 @@
+* FEA#8122 Make the user's distribution network available in preferences client side
+
 Version 1.14 - 2017-11-09
 * BUG #7110 Typo in the distribution default portfolio multivalue's __name__
 
